fix overflow

--- a/assets/styles/testimony.scss
+++ b/assets/styles/testimony.scss
@@ -21,6 +21,7 @@
 
 .testimony {
     position: relative;
+    overflow-x: hidden;
 
     .background-testimony {
         opacity: 0.3;
